{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 159,
  "lineage": "d67b47f0-7d9c-0ebc-700b-299b67c3bf4d",
  "resources": [
    {
      "module": "module.moses_vpc.module.primary-security-group_db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:495143188735:security-group/sg-0a4370dc1c5c1f116",
            "description": "Allow traffic on PostgreSQL port 5432",
            "egress": [],
            "id": "sg-0a4370dc1c5c1f116",
            "ingress": [],
            "name": "olumoko-primary_sg-db-20240913133022934500000017",
            "name_prefix": "olumoko-primary_sg-db-",
            "owner_id": "495143188735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "olumoko-primary_sg-db",
              "name": "olumoko-sg-db"
            },
            "tags_all": {
              "Name": "olumoko-primary_sg-db",
              "name": "olumoko-sg-db"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-013b5e3bc57eddd25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_cloudwatch_log_group.flow_log",
            "module.moses_vpc.module.vpc_primary.aws_customer_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_db_subnet_group.database",
            "module.moses_vpc.module.vpc_primary.aws_default_network_acl.this",
            "module.moses_vpc.module.vpc_primary.aws_default_route_table.default",
            "module.moses_vpc.module.vpc_primary.aws_default_security_group.this",
            "module.moses_vpc.module.vpc_primary.aws_default_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_egress_only_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_eip.nat",
            "module.moses_vpc.module.vpc_primary.aws_elasticache_subnet_group.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_flow_log.this",
            "module.moses_vpc.module.vpc_primary.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_nat_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.database",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.intra",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.outpost",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.private",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.public",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.redshift",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.database_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.database_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.elasticache_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.elasticache_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.intra_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.intra_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.outpost_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.outpost_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.private_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.private_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.public_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.public_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.redshift_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.redshift_outbound",
            "module.moses_vpc.module.vpc_primary.aws_redshift_subnet_group.redshift",
            "module.moses_vpc.module.vpc_primary.aws_route.database_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.database_internet_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.database_ipv6_egress",
            "module.moses_vpc.module.vpc_primary.aws_route.database_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.private_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.private_ipv6_egress",
            "module.moses_vpc.module.vpc_primary.aws_route.private_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.public_internet_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.public_internet_gateway_ipv6",
            "module.moses_vpc.module.vpc_primary.aws_route_table.database",
            "module.moses_vpc.module.vpc_primary.aws_route_table.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_route_table.intra",
            "module.moses_vpc.module.vpc_primary.aws_route_table.private",
            "module.moses_vpc.module.vpc_primary.aws_route_table.public",
            "module.moses_vpc.module.vpc_primary.aws_route_table.redshift",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.database",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.intra",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.outpost",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.private",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.public",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.redshift",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.redshift_public",
            "module.moses_vpc.module.vpc_primary.aws_subnet.database",
            "module.moses_vpc.module.vpc_primary.aws_subnet.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_subnet.intra",
            "module.moses_vpc.module.vpc_primary.aws_subnet.outpost",
            "module.moses_vpc.module.vpc_primary.aws_subnet.private",
            "module.moses_vpc.module.vpc_primary.aws_subnet.public",
            "module.moses_vpc.module.vpc_primary.aws_subnet.redshift",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_dhcp_options.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_dhcp_options_association.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_attachment.this",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_route_propagation.intra",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_route_propagation.private",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_route_propagation.public",
            "module.moses_vpc.module.vpc_primary.data.aws_caller_identity.current",
            "module.moses_vpc.module.vpc_primary.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.moses_vpc.module.vpc_primary.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.data.aws_partition.current",
            "module.moses_vpc.module.vpc_primary.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.primary-security-group_db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow outbound traffic on PostgreSQL port 5432",
            "from_port": 0,
            "id": "sgrule-989854231",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a4370dc1c5c1f116",
            "security_group_rule_id": "sgr-031f3cc460904a75e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.primary-security-group_db.aws_security_group.this",
            "module.moses_vpc.module.primary-security-group_db.aws_security_group.this_name_prefix",
            "module.moses_vpc.module.vpc_primary.aws_cloudwatch_log_group.flow_log",
            "module.moses_vpc.module.vpc_primary.aws_customer_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_db_subnet_group.database",
            "module.moses_vpc.module.vpc_primary.aws_default_network_acl.this",
            "module.moses_vpc.module.vpc_primary.aws_default_route_table.default",
            "module.moses_vpc.module.vpc_primary.aws_default_security_group.this",
            "module.moses_vpc.module.vpc_primary.aws_default_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_egress_only_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_eip.nat",
            "module.moses_vpc.module.vpc_primary.aws_elasticache_subnet_group.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_flow_log.this",
            "module.moses_vpc.module.vpc_primary.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_nat_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.database",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.intra",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.outpost",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.private",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.public",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.redshift",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.database_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.database_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.elasticache_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.elasticache_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.intra_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.intra_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.outpost_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.outpost_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.private_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.private_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.public_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.public_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.redshift_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.redshift_outbound",
            "module.moses_vpc.module.vpc_primary.aws_redshift_subnet_group.redshift",
            "module.moses_vpc.module.vpc_primary.aws_route.database_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.database_internet_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.database_ipv6_egress",
            "module.moses_vpc.module.vpc_primary.aws_route.database_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.private_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.private_ipv6_egress",
            "module.moses_vpc.module.vpc_primary.aws_route.private_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.public_internet_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.public_internet_gateway_ipv6",
            "module.moses_vpc.module.vpc_primary.aws_route_table.database",
            "module.moses_vpc.module.vpc_primary.aws_route_table.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_route_table.intra",
            "module.moses_vpc.module.vpc_primary.aws_route_table.private",
            "module.moses_vpc.module.vpc_primary.aws_route_table.public",
            "module.moses_vpc.module.vpc_primary.aws_route_table.redshift",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.database",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.intra",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.outpost",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.private",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.public",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.redshift",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.redshift_public",
            "module.moses_vpc.module.vpc_primary.aws_subnet.database",
            "module.moses_vpc.module.vpc_primary.aws_subnet.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_subnet.intra",
            "module.moses_vpc.module.vpc_primary.aws_subnet.outpost",
            "module.moses_vpc.module.vpc_primary.aws_subnet.private",
            "module.moses_vpc.module.vpc_primary.aws_subnet.public",
            "module.moses_vpc.module.vpc_primary.aws_subnet.redshift",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_dhcp_options.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_dhcp_options_association.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_attachment.this",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_route_propagation.intra",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_route_propagation.private",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_route_propagation.public",
            "module.moses_vpc.module.vpc_primary.data.aws_caller_identity.current",
            "module.moses_vpc.module.vpc_primary.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.moses_vpc.module.vpc_primary.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.data.aws_partition.current",
            "module.moses_vpc.module.vpc_primary.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.primary-security-group_db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow inbound traffic on PostgreSQL port 5432",
            "from_port": 5432,
            "id": "sgrule-522584667",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a4370dc1c5c1f116",
            "security_group_rule_id": "sgr-0379849b2cedaaf31",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.primary-security-group_db.aws_security_group.this",
            "module.moses_vpc.module.primary-security-group_db.aws_security_group.this_name_prefix",
            "module.moses_vpc.module.vpc_primary.aws_cloudwatch_log_group.flow_log",
            "module.moses_vpc.module.vpc_primary.aws_customer_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_db_subnet_group.database",
            "module.moses_vpc.module.vpc_primary.aws_default_network_acl.this",
            "module.moses_vpc.module.vpc_primary.aws_default_route_table.default",
            "module.moses_vpc.module.vpc_primary.aws_default_security_group.this",
            "module.moses_vpc.module.vpc_primary.aws_default_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_egress_only_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_eip.nat",
            "module.moses_vpc.module.vpc_primary.aws_elasticache_subnet_group.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_flow_log.this",
            "module.moses_vpc.module.vpc_primary.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_nat_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.database",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.intra",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.outpost",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.private",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.public",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.redshift",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.database_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.database_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.elasticache_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.elasticache_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.intra_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.intra_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.outpost_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.outpost_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.private_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.private_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.public_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.public_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.redshift_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.redshift_outbound",
            "module.moses_vpc.module.vpc_primary.aws_redshift_subnet_group.redshift",
            "module.moses_vpc.module.vpc_primary.aws_route.database_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.database_internet_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.database_ipv6_egress",
            "module.moses_vpc.module.vpc_primary.aws_route.database_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.private_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.private_ipv6_egress",
            "module.moses_vpc.module.vpc_primary.aws_route.private_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.public_internet_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.public_internet_gateway_ipv6",
            "module.moses_vpc.module.vpc_primary.aws_route_table.database",
            "module.moses_vpc.module.vpc_primary.aws_route_table.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_route_table.intra",
            "module.moses_vpc.module.vpc_primary.aws_route_table.private",
            "module.moses_vpc.module.vpc_primary.aws_route_table.public",
            "module.moses_vpc.module.vpc_primary.aws_route_table.redshift",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.database",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.intra",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.outpost",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.private",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.public",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.redshift",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.redshift_public",
            "module.moses_vpc.module.vpc_primary.aws_subnet.database",
            "module.moses_vpc.module.vpc_primary.aws_subnet.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_subnet.intra",
            "module.moses_vpc.module.vpc_primary.aws_subnet.outpost",
            "module.moses_vpc.module.vpc_primary.aws_subnet.private",
            "module.moses_vpc.module.vpc_primary.aws_subnet.public",
            "module.moses_vpc.module.vpc_primary.aws_subnet.redshift",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_dhcp_options.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_dhcp_options_association.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_attachment.this",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_route_propagation.intra",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_route_propagation.private",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_route_propagation.public",
            "module.moses_vpc.module.vpc_primary.data.aws_caller_identity.current",
            "module.moses_vpc.module.vpc_primary.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.moses_vpc.module.vpc_primary.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.data.aws_partition.current",
            "module.moses_vpc.module.vpc_primary.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.secondary-security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.moses_vpc.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495143188735:security-group/sg-0854ff33fce0a0038",
            "description": "Security group",
            "egress": [],
            "id": "sg-0854ff33fce0a0038",
            "ingress": [],
            "name": "olumoko-sg-2-20240913133031153900000009",
            "name_prefix": "olumoko-sg-2-",
            "owner_id": "495143188735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "olumoko-sg-2",
              "name": "olumoko-sg-2"
            },
            "tags_all": {
              "Name": "olumoko-sg-2",
              "name": "olumoko-sg-2"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0ba67eb324e54026c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_cloudwatch_log_group.flow_log",
            "module.moses_vpc.module.vpc_secondary.aws_customer_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_db_subnet_group.database",
            "module.moses_vpc.module.vpc_secondary.aws_default_network_acl.this",
            "module.moses_vpc.module.vpc_secondary.aws_default_route_table.default",
            "module.moses_vpc.module.vpc_secondary.aws_default_security_group.this",
            "module.moses_vpc.module.vpc_secondary.aws_default_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_egress_only_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_eip.nat",
            "module.moses_vpc.module.vpc_secondary.aws_elasticache_subnet_group.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_flow_log.this",
            "module.moses_vpc.module.vpc_secondary.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_nat_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.database",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.intra",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.outpost",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.private",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.public",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.database_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.database_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.elasticache_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.elasticache_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.intra_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.intra_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.outpost_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.outpost_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.private_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.private_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.public_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.public_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.redshift_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.redshift_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_redshift_subnet_group.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_internet_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_ipv6_egress",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.private_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.private_ipv6_egress",
            "module.moses_vpc.module.vpc_secondary.aws_route.private_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.public_internet_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.public_internet_gateway_ipv6",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.database",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.intra",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.private",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.public",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.database",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.intra",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.outpost",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.private",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.public",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.redshift_public",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.database",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.intra",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.outpost",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.private",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.public",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_dhcp_options.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_dhcp_options_association.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_attachment.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_route_propagation.intra",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_route_propagation.private",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_route_propagation.public",
            "module.moses_vpc.module.vpc_secondary.data.aws_caller_identity.current",
            "module.moses_vpc.module.vpc_secondary.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.moses_vpc.module.vpc_secondary.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.data.aws_partition.current",
            "module.moses_vpc.module.vpc_secondary.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.secondary-security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "module.moses_vpc.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound HTTPS traffic",
            "from_port": 443,
            "id": "sgrule-3238325161",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0854ff33fce0a0038",
            "security_group_rule_id": "sgr-02fdbe2d054893927",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.secondary-security-group.aws_security_group.this",
            "module.moses_vpc.module.secondary-security-group.aws_security_group.this_name_prefix",
            "module.moses_vpc.module.vpc_secondary.aws_cloudwatch_log_group.flow_log",
            "module.moses_vpc.module.vpc_secondary.aws_customer_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_db_subnet_group.database",
            "module.moses_vpc.module.vpc_secondary.aws_default_network_acl.this",
            "module.moses_vpc.module.vpc_secondary.aws_default_route_table.default",
            "module.moses_vpc.module.vpc_secondary.aws_default_security_group.this",
            "module.moses_vpc.module.vpc_secondary.aws_default_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_egress_only_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_eip.nat",
            "module.moses_vpc.module.vpc_secondary.aws_elasticache_subnet_group.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_flow_log.this",
            "module.moses_vpc.module.vpc_secondary.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_nat_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.database",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.intra",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.outpost",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.private",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.public",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.database_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.database_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.elasticache_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.elasticache_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.intra_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.intra_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.outpost_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.outpost_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.private_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.private_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.public_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.public_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.redshift_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.redshift_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_redshift_subnet_group.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_internet_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_ipv6_egress",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.private_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.private_ipv6_egress",
            "module.moses_vpc.module.vpc_secondary.aws_route.private_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.public_internet_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.public_internet_gateway_ipv6",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.database",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.intra",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.private",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.public",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.database",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.intra",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.outpost",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.private",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.public",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.redshift_public",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.database",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.intra",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.outpost",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.private",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.public",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_dhcp_options.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_dhcp_options_association.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_attachment.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_route_propagation.intra",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_route_propagation.private",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_route_propagation.public",
            "module.moses_vpc.module.vpc_secondary.data.aws_caller_identity.current",
            "module.moses_vpc.module.vpc_secondary.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.moses_vpc.module.vpc_secondary.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.data.aws_partition.current",
            "module.moses_vpc.module.vpc_secondary.data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound HTTP traffic",
            "from_port": 80,
            "id": "sgrule-1852221428",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0854ff33fce0a0038",
            "security_group_rule_id": "sgr-074f248618668c3fa",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.secondary-security-group.aws_security_group.this",
            "module.moses_vpc.module.secondary-security-group.aws_security_group.this_name_prefix",
            "module.moses_vpc.module.vpc_secondary.aws_cloudwatch_log_group.flow_log",
            "module.moses_vpc.module.vpc_secondary.aws_customer_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_db_subnet_group.database",
            "module.moses_vpc.module.vpc_secondary.aws_default_network_acl.this",
            "module.moses_vpc.module.vpc_secondary.aws_default_route_table.default",
            "module.moses_vpc.module.vpc_secondary.aws_default_security_group.this",
            "module.moses_vpc.module.vpc_secondary.aws_default_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_egress_only_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_eip.nat",
            "module.moses_vpc.module.vpc_secondary.aws_elasticache_subnet_group.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_flow_log.this",
            "module.moses_vpc.module.vpc_secondary.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_nat_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.database",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.intra",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.outpost",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.private",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.public",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.database_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.database_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.elasticache_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.elasticache_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.intra_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.intra_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.outpost_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.outpost_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.private_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.private_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.public_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.public_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.redshift_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.redshift_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_redshift_subnet_group.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_internet_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_ipv6_egress",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.private_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.private_ipv6_egress",
            "module.moses_vpc.module.vpc_secondary.aws_route.private_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.public_internet_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.public_internet_gateway_ipv6",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.database",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.intra",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.private",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.public",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.database",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.intra",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.outpost",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.private",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.public",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.redshift_public",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.database",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.intra",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.outpost",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.private",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.public",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_dhcp_options.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_dhcp_options_association.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_attachment.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_route_propagation.intra",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_route_propagation.private",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_route_propagation.public",
            "module.moses_vpc.module.vpc_secondary.data.aws_caller_identity.current",
            "module.moses_vpc.module.vpc_secondary.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.moses_vpc.module.vpc_secondary.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.data.aws_partition.current",
            "module.moses_vpc.module.vpc_secondary.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.secondary-security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "module.moses_vpc.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow outbound HTTPS traffic",
            "from_port": 443,
            "id": "sgrule-1063128378",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0854ff33fce0a0038",
            "security_group_rule_id": "sgr-0b9d6e7dfd088a0b1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.secondary-security-group.aws_security_group.this",
            "module.moses_vpc.module.secondary-security-group.aws_security_group.this_name_prefix",
            "module.moses_vpc.module.vpc_secondary.aws_cloudwatch_log_group.flow_log",
            "module.moses_vpc.module.vpc_secondary.aws_customer_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_db_subnet_group.database",
            "module.moses_vpc.module.vpc_secondary.aws_default_network_acl.this",
            "module.moses_vpc.module.vpc_secondary.aws_default_route_table.default",
            "module.moses_vpc.module.vpc_secondary.aws_default_security_group.this",
            "module.moses_vpc.module.vpc_secondary.aws_default_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_egress_only_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_eip.nat",
            "module.moses_vpc.module.vpc_secondary.aws_elasticache_subnet_group.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_flow_log.this",
            "module.moses_vpc.module.vpc_secondary.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_nat_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.database",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.intra",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.outpost",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.private",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.public",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.database_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.database_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.elasticache_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.elasticache_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.intra_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.intra_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.outpost_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.outpost_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.private_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.private_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.public_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.public_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.redshift_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.redshift_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_redshift_subnet_group.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_internet_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_ipv6_egress",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.private_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.private_ipv6_egress",
            "module.moses_vpc.module.vpc_secondary.aws_route.private_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.public_internet_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.public_internet_gateway_ipv6",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.database",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.intra",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.private",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.public",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.database",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.intra",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.outpost",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.private",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.public",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.redshift_public",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.database",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.intra",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.outpost",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.private",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.public",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_dhcp_options.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_dhcp_options_association.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_attachment.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_route_propagation.intra",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_route_propagation.private",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_route_propagation.public",
            "module.moses_vpc.module.vpc_secondary.data.aws_caller_identity.current",
            "module.moses_vpc.module.vpc_secondary.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.moses_vpc.module.vpc_secondary.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.data.aws_partition.current",
            "module.moses_vpc.module.vpc_secondary.data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow outbound HTTP traffic",
            "from_port": 80,
            "id": "sgrule-2756358155",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0854ff33fce0a0038",
            "security_group_rule_id": "sgr-0e4d3076a7b4ce92f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.secondary-security-group.aws_security_group.this",
            "module.moses_vpc.module.secondary-security-group.aws_security_group.this_name_prefix",
            "module.moses_vpc.module.vpc_secondary.aws_cloudwatch_log_group.flow_log",
            "module.moses_vpc.module.vpc_secondary.aws_customer_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_db_subnet_group.database",
            "module.moses_vpc.module.vpc_secondary.aws_default_network_acl.this",
            "module.moses_vpc.module.vpc_secondary.aws_default_route_table.default",
            "module.moses_vpc.module.vpc_secondary.aws_default_security_group.this",
            "module.moses_vpc.module.vpc_secondary.aws_default_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_egress_only_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_eip.nat",
            "module.moses_vpc.module.vpc_secondary.aws_elasticache_subnet_group.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_flow_log.this",
            "module.moses_vpc.module.vpc_secondary.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_nat_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.database",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.intra",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.outpost",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.private",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.public",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.database_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.database_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.elasticache_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.elasticache_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.intra_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.intra_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.outpost_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.outpost_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.private_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.private_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.public_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.public_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.redshift_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.redshift_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_redshift_subnet_group.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_internet_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_ipv6_egress",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.private_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.private_ipv6_egress",
            "module.moses_vpc.module.vpc_secondary.aws_route.private_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.public_internet_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.public_internet_gateway_ipv6",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.database",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.intra",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.private",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.public",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.database",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.intra",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.outpost",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.private",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.public",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.redshift_public",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.database",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.intra",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.outpost",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.private",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.public",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_dhcp_options.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_dhcp_options_association.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_attachment.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_route_propagation.intra",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_route_propagation.private",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_route_propagation.public",
            "module.moses_vpc.module.vpc_secondary.data.aws_caller_identity.current",
            "module.moses_vpc.module.vpc_secondary.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.moses_vpc.module.vpc_secondary.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.data.aws_partition.current",
            "module.moses_vpc.module.vpc_secondary.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.secondary-security-group_db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.moses_vpc.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495143188735:security-group/sg-091cc4459555cd876",
            "description": "Allow traffic on PostgreSQL port 5432",
            "egress": [],
            "id": "sg-091cc4459555cd876",
            "ingress": [],
            "name": "olumoko-secondary_sg-db-20240913133031153900000008",
            "name_prefix": "olumoko-secondary_sg-db-",
            "owner_id": "495143188735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "olumoko-secondary_sg-db",
              "name": "olumoko-sg-db"
            },
            "tags_all": {
              "Name": "olumoko-secondary_sg-db",
              "name": "olumoko-sg-db"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0ba67eb324e54026c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_cloudwatch_log_group.flow_log",
            "module.moses_vpc.module.vpc_secondary.aws_customer_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_db_subnet_group.database",
            "module.moses_vpc.module.vpc_secondary.aws_default_network_acl.this",
            "module.moses_vpc.module.vpc_secondary.aws_default_route_table.default",
            "module.moses_vpc.module.vpc_secondary.aws_default_security_group.this",
            "module.moses_vpc.module.vpc_secondary.aws_default_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_egress_only_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_eip.nat",
            "module.moses_vpc.module.vpc_secondary.aws_elasticache_subnet_group.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_flow_log.this",
            "module.moses_vpc.module.vpc_secondary.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_nat_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.database",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.intra",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.outpost",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.private",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.public",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.database_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.database_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.elasticache_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.elasticache_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.intra_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.intra_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.outpost_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.outpost_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.private_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.private_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.public_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.public_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.redshift_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.redshift_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_redshift_subnet_group.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_internet_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_ipv6_egress",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.private_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.private_ipv6_egress",
            "module.moses_vpc.module.vpc_secondary.aws_route.private_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.public_internet_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.public_internet_gateway_ipv6",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.database",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.intra",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.private",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.public",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.database",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.intra",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.outpost",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.private",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.public",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.redshift_public",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.database",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.intra",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.outpost",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.private",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.public",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_dhcp_options.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_dhcp_options_association.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_attachment.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_route_propagation.intra",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_route_propagation.private",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_route_propagation.public",
            "module.moses_vpc.module.vpc_secondary.data.aws_caller_identity.current",
            "module.moses_vpc.module.vpc_secondary.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.moses_vpc.module.vpc_secondary.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.data.aws_partition.current",
            "module.moses_vpc.module.vpc_secondary.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.secondary-security-group_db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "module.moses_vpc.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow outbound traffic on PostgreSQL port 5432",
            "from_port": 0,
            "id": "sgrule-1650609051",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-091cc4459555cd876",
            "security_group_rule_id": "sgr-07eeea9c5770a6c5a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.secondary-security-group_db.aws_security_group.this",
            "module.moses_vpc.module.secondary-security-group_db.aws_security_group.this_name_prefix",
            "module.moses_vpc.module.vpc_secondary.aws_cloudwatch_log_group.flow_log",
            "module.moses_vpc.module.vpc_secondary.aws_customer_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_db_subnet_group.database",
            "module.moses_vpc.module.vpc_secondary.aws_default_network_acl.this",
            "module.moses_vpc.module.vpc_secondary.aws_default_route_table.default",
            "module.moses_vpc.module.vpc_secondary.aws_default_security_group.this",
            "module.moses_vpc.module.vpc_secondary.aws_default_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_egress_only_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_eip.nat",
            "module.moses_vpc.module.vpc_secondary.aws_elasticache_subnet_group.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_flow_log.this",
            "module.moses_vpc.module.vpc_secondary.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_nat_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.database",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.intra",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.outpost",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.private",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.public",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.database_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.database_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.elasticache_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.elasticache_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.intra_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.intra_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.outpost_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.outpost_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.private_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.private_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.public_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.public_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.redshift_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.redshift_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_redshift_subnet_group.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_internet_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_ipv6_egress",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.private_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.private_ipv6_egress",
            "module.moses_vpc.module.vpc_secondary.aws_route.private_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.public_internet_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.public_internet_gateway_ipv6",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.database",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.intra",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.private",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.public",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.database",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.intra",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.outpost",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.private",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.public",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.redshift_public",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.database",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.intra",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.outpost",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.private",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.public",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_dhcp_options.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_dhcp_options_association.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_attachment.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_route_propagation.intra",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_route_propagation.private",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_route_propagation.public",
            "module.moses_vpc.module.vpc_secondary.data.aws_caller_identity.current",
            "module.moses_vpc.module.vpc_secondary.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.moses_vpc.module.vpc_secondary.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.data.aws_partition.current",
            "module.moses_vpc.module.vpc_secondary.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.secondary-security-group_db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "module.moses_vpc.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow inbound traffic on PostgreSQL port 5432",
            "from_port": 5432,
            "id": "sgrule-422666574",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-091cc4459555cd876",
            "security_group_rule_id": "sgr-0da659200679c6d6e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.secondary-security-group_db.aws_security_group.this",
            "module.moses_vpc.module.secondary-security-group_db.aws_security_group.this_name_prefix",
            "module.moses_vpc.module.vpc_secondary.aws_cloudwatch_log_group.flow_log",
            "module.moses_vpc.module.vpc_secondary.aws_customer_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_db_subnet_group.database",
            "module.moses_vpc.module.vpc_secondary.aws_default_network_acl.this",
            "module.moses_vpc.module.vpc_secondary.aws_default_route_table.default",
            "module.moses_vpc.module.vpc_secondary.aws_default_security_group.this",
            "module.moses_vpc.module.vpc_secondary.aws_default_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_egress_only_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_eip.nat",
            "module.moses_vpc.module.vpc_secondary.aws_elasticache_subnet_group.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_flow_log.this",
            "module.moses_vpc.module.vpc_secondary.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_nat_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.database",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.intra",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.outpost",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.private",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.public",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.database_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.database_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.elasticache_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.elasticache_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.intra_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.intra_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.outpost_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.outpost_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.private_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.private_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.public_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.public_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.redshift_inbound",
            "module.moses_vpc.module.vpc_secondary.aws_network_acl_rule.redshift_outbound",
            "module.moses_vpc.module.vpc_secondary.aws_redshift_subnet_group.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_internet_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_ipv6_egress",
            "module.moses_vpc.module.vpc_secondary.aws_route.database_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.private_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.private_ipv6_egress",
            "module.moses_vpc.module.vpc_secondary.aws_route.private_nat_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.public_internet_gateway",
            "module.moses_vpc.module.vpc_secondary.aws_route.public_internet_gateway_ipv6",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.database",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.intra",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.private",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.public",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.database",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.intra",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.outpost",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.private",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.public",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_route_table_association.redshift_public",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.database",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.elasticache",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.intra",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.outpost",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.private",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.public",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.redshift",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_dhcp_options.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_dhcp_options_association.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_attachment.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_route_propagation.intra",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_route_propagation.private",
            "module.moses_vpc.module.vpc_secondary.aws_vpn_gateway_route_propagation.public",
            "module.moses_vpc.module.vpc_secondary.data.aws_caller_identity.current",
            "module.moses_vpc.module.vpc_secondary.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.moses_vpc.module.vpc_secondary.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_secondary.data.aws_partition.current",
            "module.moses_vpc.module.vpc_secondary.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:495143188735:security-group/sg-08ac37045d80fc9d0",
            "description": "Security group",
            "egress": [],
            "id": "sg-08ac37045d80fc9d0",
            "ingress": [],
            "name": "olumoko-sg-1-20240913133022934600000018",
            "name_prefix": "olumoko-sg-1-",
            "owner_id": "495143188735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "olumoko-sg-1",
              "name": "olumoko-sg"
            },
            "tags_all": {
              "Name": "olumoko-sg-1",
              "name": "olumoko-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-013b5e3bc57eddd25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_cloudwatch_log_group.flow_log",
            "module.moses_vpc.module.vpc_primary.aws_customer_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_db_subnet_group.database",
            "module.moses_vpc.module.vpc_primary.aws_default_network_acl.this",
            "module.moses_vpc.module.vpc_primary.aws_default_route_table.default",
            "module.moses_vpc.module.vpc_primary.aws_default_security_group.this",
            "module.moses_vpc.module.vpc_primary.aws_default_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_egress_only_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_eip.nat",
            "module.moses_vpc.module.vpc_primary.aws_elasticache_subnet_group.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_flow_log.this",
            "module.moses_vpc.module.vpc_primary.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_nat_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.database",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.intra",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.outpost",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.private",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.public",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.redshift",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.database_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.database_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.elasticache_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.elasticache_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.intra_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.intra_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.outpost_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.outpost_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.private_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.private_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.public_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.public_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.redshift_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.redshift_outbound",
            "module.moses_vpc.module.vpc_primary.aws_redshift_subnet_group.redshift",
            "module.moses_vpc.module.vpc_primary.aws_route.database_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.database_internet_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.database_ipv6_egress",
            "module.moses_vpc.module.vpc_primary.aws_route.database_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.private_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.private_ipv6_egress",
            "module.moses_vpc.module.vpc_primary.aws_route.private_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.public_internet_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.public_internet_gateway_ipv6",
            "module.moses_vpc.module.vpc_primary.aws_route_table.database",
            "module.moses_vpc.module.vpc_primary.aws_route_table.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_route_table.intra",
            "module.moses_vpc.module.vpc_primary.aws_route_table.private",
            "module.moses_vpc.module.vpc_primary.aws_route_table.public",
            "module.moses_vpc.module.vpc_primary.aws_route_table.redshift",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.database",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.intra",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.outpost",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.private",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.public",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.redshift",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.redshift_public",
            "module.moses_vpc.module.vpc_primary.aws_subnet.database",
            "module.moses_vpc.module.vpc_primary.aws_subnet.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_subnet.intra",
            "module.moses_vpc.module.vpc_primary.aws_subnet.outpost",
            "module.moses_vpc.module.vpc_primary.aws_subnet.private",
            "module.moses_vpc.module.vpc_primary.aws_subnet.public",
            "module.moses_vpc.module.vpc_primary.aws_subnet.redshift",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_dhcp_options.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_dhcp_options_association.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_attachment.this",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_route_propagation.intra",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_route_propagation.private",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_route_propagation.public",
            "module.moses_vpc.module.vpc_primary.data.aws_caller_identity.current",
            "module.moses_vpc.module.vpc_primary.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.moses_vpc.module.vpc_primary.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.data.aws_partition.current",
            "module.moses_vpc.module.vpc_primary.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound HTTPS traffic",
            "from_port": 443,
            "id": "sgrule-2081393826",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08ac37045d80fc9d0",
            "security_group_rule_id": "sgr-0f0ae6798ab29ac29",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.security-group.aws_security_group.this",
            "module.moses_vpc.module.security-group.aws_security_group.this_name_prefix",
            "module.moses_vpc.module.vpc_primary.aws_cloudwatch_log_group.flow_log",
            "module.moses_vpc.module.vpc_primary.aws_customer_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_db_subnet_group.database",
            "module.moses_vpc.module.vpc_primary.aws_default_network_acl.this",
            "module.moses_vpc.module.vpc_primary.aws_default_route_table.default",
            "module.moses_vpc.module.vpc_primary.aws_default_security_group.this",
            "module.moses_vpc.module.vpc_primary.aws_default_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_egress_only_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_eip.nat",
            "module.moses_vpc.module.vpc_primary.aws_elasticache_subnet_group.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_flow_log.this",
            "module.moses_vpc.module.vpc_primary.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_nat_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.database",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.intra",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.outpost",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.private",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.public",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.redshift",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.database_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.database_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.elasticache_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.elasticache_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.intra_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.intra_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.outpost_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.outpost_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.private_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.private_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.public_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.public_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.redshift_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.redshift_outbound",
            "module.moses_vpc.module.vpc_primary.aws_redshift_subnet_group.redshift",
            "module.moses_vpc.module.vpc_primary.aws_route.database_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.database_internet_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.database_ipv6_egress",
            "module.moses_vpc.module.vpc_primary.aws_route.database_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.private_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.private_ipv6_egress",
            "module.moses_vpc.module.vpc_primary.aws_route.private_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.public_internet_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.public_internet_gateway_ipv6",
            "module.moses_vpc.module.vpc_primary.aws_route_table.database",
            "module.moses_vpc.module.vpc_primary.aws_route_table.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_route_table.intra",
            "module.moses_vpc.module.vpc_primary.aws_route_table.private",
            "module.moses_vpc.module.vpc_primary.aws_route_table.public",
            "module.moses_vpc.module.vpc_primary.aws_route_table.redshift",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.database",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.intra",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.outpost",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.private",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.public",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.redshift",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.redshift_public",
            "module.moses_vpc.module.vpc_primary.aws_subnet.database",
            "module.moses_vpc.module.vpc_primary.aws_subnet.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_subnet.intra",
            "module.moses_vpc.module.vpc_primary.aws_subnet.outpost",
            "module.moses_vpc.module.vpc_primary.aws_subnet.private",
            "module.moses_vpc.module.vpc_primary.aws_subnet.public",
            "module.moses_vpc.module.vpc_primary.aws_subnet.redshift",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_dhcp_options.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_dhcp_options_association.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_attachment.this",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_route_propagation.intra",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_route_propagation.private",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_route_propagation.public",
            "module.moses_vpc.module.vpc_primary.data.aws_caller_identity.current",
            "module.moses_vpc.module.vpc_primary.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.moses_vpc.module.vpc_primary.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.data.aws_partition.current",
            "module.moses_vpc.module.vpc_primary.data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound HTTP traffic",
            "from_port": 80,
            "id": "sgrule-2640079563",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08ac37045d80fc9d0",
            "security_group_rule_id": "sgr-00a7e4d00ed0050af",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.security-group.aws_security_group.this",
            "module.moses_vpc.module.security-group.aws_security_group.this_name_prefix",
            "module.moses_vpc.module.vpc_primary.aws_cloudwatch_log_group.flow_log",
            "module.moses_vpc.module.vpc_primary.aws_customer_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_db_subnet_group.database",
            "module.moses_vpc.module.vpc_primary.aws_default_network_acl.this",
            "module.moses_vpc.module.vpc_primary.aws_default_route_table.default",
            "module.moses_vpc.module.vpc_primary.aws_default_security_group.this",
            "module.moses_vpc.module.vpc_primary.aws_default_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_egress_only_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_eip.nat",
            "module.moses_vpc.module.vpc_primary.aws_elasticache_subnet_group.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_flow_log.this",
            "module.moses_vpc.module.vpc_primary.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_nat_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.database",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.intra",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.outpost",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.private",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.public",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.redshift",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.database_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.database_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.elasticache_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.elasticache_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.intra_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.intra_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.outpost_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.outpost_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.private_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.private_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.public_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.public_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.redshift_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.redshift_outbound",
            "module.moses_vpc.module.vpc_primary.aws_redshift_subnet_group.redshift",
            "module.moses_vpc.module.vpc_primary.aws_route.database_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.database_internet_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.database_ipv6_egress",
            "module.moses_vpc.module.vpc_primary.aws_route.database_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.private_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.private_ipv6_egress",
            "module.moses_vpc.module.vpc_primary.aws_route.private_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.public_internet_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.public_internet_gateway_ipv6",
            "module.moses_vpc.module.vpc_primary.aws_route_table.database",
            "module.moses_vpc.module.vpc_primary.aws_route_table.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_route_table.intra",
            "module.moses_vpc.module.vpc_primary.aws_route_table.private",
            "module.moses_vpc.module.vpc_primary.aws_route_table.public",
            "module.moses_vpc.module.vpc_primary.aws_route_table.redshift",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.database",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.intra",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.outpost",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.private",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.public",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.redshift",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.redshift_public",
            "module.moses_vpc.module.vpc_primary.aws_subnet.database",
            "module.moses_vpc.module.vpc_primary.aws_subnet.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_subnet.intra",
            "module.moses_vpc.module.vpc_primary.aws_subnet.outpost",
            "module.moses_vpc.module.vpc_primary.aws_subnet.private",
            "module.moses_vpc.module.vpc_primary.aws_subnet.public",
            "module.moses_vpc.module.vpc_primary.aws_subnet.redshift",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_dhcp_options.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_dhcp_options_association.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_attachment.this",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_route_propagation.intra",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_route_propagation.private",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_route_propagation.public",
            "module.moses_vpc.module.vpc_primary.data.aws_caller_identity.current",
            "module.moses_vpc.module.vpc_primary.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.moses_vpc.module.vpc_primary.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.data.aws_partition.current",
            "module.moses_vpc.module.vpc_primary.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow outbound HTTPS traffic",
            "from_port": 443,
            "id": "sgrule-2389034638",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08ac37045d80fc9d0",
            "security_group_rule_id": "sgr-079daa11a52d6a092",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.security-group.aws_security_group.this",
            "module.moses_vpc.module.security-group.aws_security_group.this_name_prefix",
            "module.moses_vpc.module.vpc_primary.aws_cloudwatch_log_group.flow_log",
            "module.moses_vpc.module.vpc_primary.aws_customer_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_db_subnet_group.database",
            "module.moses_vpc.module.vpc_primary.aws_default_network_acl.this",
            "module.moses_vpc.module.vpc_primary.aws_default_route_table.default",
            "module.moses_vpc.module.vpc_primary.aws_default_security_group.this",
            "module.moses_vpc.module.vpc_primary.aws_default_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_egress_only_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_eip.nat",
            "module.moses_vpc.module.vpc_primary.aws_elasticache_subnet_group.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_flow_log.this",
            "module.moses_vpc.module.vpc_primary.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_nat_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.database",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.intra",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.outpost",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.private",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.public",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.redshift",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.database_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.database_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.elasticache_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.elasticache_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.intra_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.intra_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.outpost_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.outpost_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.private_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.private_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.public_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.public_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.redshift_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.redshift_outbound",
            "module.moses_vpc.module.vpc_primary.aws_redshift_subnet_group.redshift",
            "module.moses_vpc.module.vpc_primary.aws_route.database_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.database_internet_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.database_ipv6_egress",
            "module.moses_vpc.module.vpc_primary.aws_route.database_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.private_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.private_ipv6_egress",
            "module.moses_vpc.module.vpc_primary.aws_route.private_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.public_internet_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.public_internet_gateway_ipv6",
            "module.moses_vpc.module.vpc_primary.aws_route_table.database",
            "module.moses_vpc.module.vpc_primary.aws_route_table.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_route_table.intra",
            "module.moses_vpc.module.vpc_primary.aws_route_table.private",
            "module.moses_vpc.module.vpc_primary.aws_route_table.public",
            "module.moses_vpc.module.vpc_primary.aws_route_table.redshift",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.database",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.intra",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.outpost",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.private",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.public",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.redshift",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.redshift_public",
            "module.moses_vpc.module.vpc_primary.aws_subnet.database",
            "module.moses_vpc.module.vpc_primary.aws_subnet.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_subnet.intra",
            "module.moses_vpc.module.vpc_primary.aws_subnet.outpost",
            "module.moses_vpc.module.vpc_primary.aws_subnet.private",
            "module.moses_vpc.module.vpc_primary.aws_subnet.public",
            "module.moses_vpc.module.vpc_primary.aws_subnet.redshift",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_dhcp_options.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_dhcp_options_association.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_attachment.this",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_route_propagation.intra",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_route_propagation.private",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_route_propagation.public",
            "module.moses_vpc.module.vpc_primary.data.aws_caller_identity.current",
            "module.moses_vpc.module.vpc_primary.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.moses_vpc.module.vpc_primary.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.data.aws_partition.current",
            "module.moses_vpc.module.vpc_primary.data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow outbound HTTP traffic",
            "from_port": 80,
            "id": "sgrule-858088164",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08ac37045d80fc9d0",
            "security_group_rule_id": "sgr-0fed89d7a1c7e5984",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.security-group.aws_security_group.this",
            "module.moses_vpc.module.security-group.aws_security_group.this_name_prefix",
            "module.moses_vpc.module.vpc_primary.aws_cloudwatch_log_group.flow_log",
            "module.moses_vpc.module.vpc_primary.aws_customer_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_db_subnet_group.database",
            "module.moses_vpc.module.vpc_primary.aws_default_network_acl.this",
            "module.moses_vpc.module.vpc_primary.aws_default_route_table.default",
            "module.moses_vpc.module.vpc_primary.aws_default_security_group.this",
            "module.moses_vpc.module.vpc_primary.aws_default_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_egress_only_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_eip.nat",
            "module.moses_vpc.module.vpc_primary.aws_elasticache_subnet_group.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_flow_log.this",
            "module.moses_vpc.module.vpc_primary.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_nat_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.database",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.intra",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.outpost",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.private",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.public",
            "module.moses_vpc.module.vpc_primary.aws_network_acl.redshift",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.database_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.database_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.elasticache_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.elasticache_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.intra_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.intra_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.outpost_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.outpost_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.private_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.private_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.public_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.public_outbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.redshift_inbound",
            "module.moses_vpc.module.vpc_primary.aws_network_acl_rule.redshift_outbound",
            "module.moses_vpc.module.vpc_primary.aws_redshift_subnet_group.redshift",
            "module.moses_vpc.module.vpc_primary.aws_route.database_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.database_internet_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.database_ipv6_egress",
            "module.moses_vpc.module.vpc_primary.aws_route.database_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.private_dns64_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.private_ipv6_egress",
            "module.moses_vpc.module.vpc_primary.aws_route.private_nat_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.public_internet_gateway",
            "module.moses_vpc.module.vpc_primary.aws_route.public_internet_gateway_ipv6",
            "module.moses_vpc.module.vpc_primary.aws_route_table.database",
            "module.moses_vpc.module.vpc_primary.aws_route_table.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_route_table.intra",
            "module.moses_vpc.module.vpc_primary.aws_route_table.private",
            "module.moses_vpc.module.vpc_primary.aws_route_table.public",
            "module.moses_vpc.module.vpc_primary.aws_route_table.redshift",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.database",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.intra",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.outpost",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.private",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.public",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.redshift",
            "module.moses_vpc.module.vpc_primary.aws_route_table_association.redshift_public",
            "module.moses_vpc.module.vpc_primary.aws_subnet.database",
            "module.moses_vpc.module.vpc_primary.aws_subnet.elasticache",
            "module.moses_vpc.module.vpc_primary.aws_subnet.intra",
            "module.moses_vpc.module.vpc_primary.aws_subnet.outpost",
            "module.moses_vpc.module.vpc_primary.aws_subnet.private",
            "module.moses_vpc.module.vpc_primary.aws_subnet.public",
            "module.moses_vpc.module.vpc_primary.aws_subnet.redshift",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_dhcp_options.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_dhcp_options_association.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_attachment.this",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_route_propagation.intra",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_route_propagation.private",
            "module.moses_vpc.module.vpc_primary.aws_vpn_gateway_route_propagation.public",
            "module.moses_vpc.module.vpc_primary.data.aws_caller_identity.current",
            "module.moses_vpc.module.vpc_primary.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.moses_vpc.module.vpc_primary.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.moses_vpc.module.vpc_primary.data.aws_partition.current",
            "module.moses_vpc.module.vpc_primary.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_primary",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:495143188735:network-acl/acl-0d43be4f1b270e882",
            "default_network_acl_id": "acl-0d43be4f1b270e882",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d43be4f1b270e882",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "495143188735",
            "subnet_ids": [
              "subnet-028764d90992587d1",
              "subnet-03fae03eb1d2cf414",
              "subnet-064866f372299bf2b",
              "subnet-07646f2d03b72daf0",
              "subnet-0a9767c8f72f68e4a",
              "subnet-0eb0605ed75c1e98b"
            ],
            "tags": {
              "Name": "olumoko-primary-vpc-default"
            },
            "tags_all": {
              "Name": "olumoko-primary-vpc-default"
            },
            "vpc_id": "vpc-013b5e3bc57eddd25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_primary.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_primary",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:495143188735:route-table/rtb-0614ea2dd1f9e55cd",
            "default_route_table_id": "rtb-0614ea2dd1f9e55cd",
            "id": "rtb-0614ea2dd1f9e55cd",
            "owner_id": "495143188735",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "olumoko-primary-vpc-default"
            },
            "tags_all": {
              "Name": "olumoko-primary-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-013b5e3bc57eddd25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_primary.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_primary",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:495143188735:security-group/sg-02765b50abe5357ba",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02765b50abe5357ba",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "495143188735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "olumoko-primary-vpc-default"
            },
            "tags_all": {
              "Name": "olumoko-primary-vpc-default"
            },
            "vpc_id": "vpc-013b5e3bc57eddd25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_primary.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_primary",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fd67bae61240437e",
            "arn": "arn:aws:ec2:eu-west-1:495143188735:elastic-ip/eipalloc-0fd67bae61240437e",
            "domain": "vpc",
            "id": "eipalloc-0fd67bae61240437e",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-170-25-120.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.170.25.120",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "olumoko-primary-vpc-eu-west-1a"
            },
            "tags_all": {
              "Name": "olumoko-primary-vpc-eu-west-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04e494b47407251d4",
            "arn": "arn:aws:ec2:eu-west-1:495143188735:elastic-ip/eipalloc-04e494b47407251d4",
            "domain": "vpc",
            "id": "eipalloc-04e494b47407251d4",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-79-125-36-12.eu-west-1.compute.amazonaws.com",
            "public_ip": "79.125.36.12",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "olumoko-primary-vpc-eu-west-1b"
            },
            "tags_all": {
              "Name": "olumoko-primary-vpc-eu-west-1b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-052fbe7cb6cf75644",
            "arn": "arn:aws:ec2:eu-west-1:495143188735:elastic-ip/eipalloc-052fbe7cb6cf75644",
            "domain": "vpc",
            "id": "eipalloc-052fbe7cb6cf75644",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-220-235-53.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.220.235.53",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "olumoko-primary-vpc-eu-west-1c"
            },
            "tags_all": {
              "Name": "olumoko-primary-vpc-eu-west-1c"
            },
            "vpc": true
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_primary",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:495143188735:internet-gateway/igw-0f48e073ce5fde23f",
            "id": "igw-0f48e073ce5fde23f",
            "owner_id": "495143188735",
            "tags": {
              "Name": "olumoko-primary-vpc"
            },
            "tags_all": {
              "Name": "olumoko-primary-vpc"
            },
            "vpc_id": "vpc-013b5e3bc57eddd25"
          },
          "dependencies": [
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_primary",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fd67bae61240437e",
            "association_id": "eipassoc-00d761cb63902f80a",
            "connectivity_type": "public",
            "id": "nat-0f5451b6817620973",
            "network_interface_id": "eni-04fae32e01216f9db",
            "private_ip": "10.0.4.54",
            "public_ip": "54.170.25.120",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a9767c8f72f68e4a",
            "tags": {
              "Name": "olumoko-primary-vpc-eu-west-1a"
            },
            "tags_all": {
              "Name": "olumoko-primary-vpc-eu-west-1a"
            }
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_eip.nat",
            "module.moses_vpc.module.vpc_primary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_subnet.public",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04e494b47407251d4",
            "association_id": "eipassoc-05f6e3057de4b3078",
            "connectivity_type": "public",
            "id": "nat-001f2df05f4ab5aff",
            "network_interface_id": "eni-00b6695a36fb90e55",
            "private_ip": "10.0.5.118",
            "public_ip": "79.125.36.12",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-064866f372299bf2b",
            "tags": {
              "Name": "olumoko-primary-vpc-eu-west-1b"
            },
            "tags_all": {
              "Name": "olumoko-primary-vpc-eu-west-1b"
            }
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_eip.nat",
            "module.moses_vpc.module.vpc_primary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_subnet.public",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-052fbe7cb6cf75644",
            "association_id": "eipassoc-0ecdf85d954881ee7",
            "connectivity_type": "public",
            "id": "nat-0b8d7e7e86ba9ec82",
            "network_interface_id": "eni-0977a3d731a25ea94",
            "private_ip": "10.0.6.5",
            "public_ip": "54.220.235.53",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-028764d90992587d1",
            "tags": {
              "Name": "olumoko-primary-vpc-eu-west-1c"
            },
            "tags_all": {
              "Name": "olumoko-primary-vpc-eu-west-1c"
            }
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_eip.nat",
            "module.moses_vpc.module.vpc_primary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_subnet.public",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_primary",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02b2655f357d182751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f5451b6817620973",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02b2655f357d18275",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_eip.nat",
            "module.moses_vpc.module.vpc_primary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_nat_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_route_table.private",
            "module.moses_vpc.module.vpc_primary.aws_subnet.public",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-009d55bd0ac8a60311080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-001f2df05f4ab5aff",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-009d55bd0ac8a6031",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_eip.nat",
            "module.moses_vpc.module.vpc_primary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_nat_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_route_table.private",
            "module.moses_vpc.module.vpc_primary.aws_subnet.public",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02230399896825c311080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b8d7e7e86ba9ec82",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02230399896825c31",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_eip.nat",
            "module.moses_vpc.module.vpc_primary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_nat_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_route_table.private",
            "module.moses_vpc.module.vpc_primary.aws_subnet.public",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_primary",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f48e073ce5fde23f",
            "id": "r-rtb-04711ec244d749a161080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04711ec244d749a16",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_primary.aws_route_table.public",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:495143188735:route-table/rtb-02b2655f357d18275",
            "id": "rtb-02b2655f357d18275",
            "owner_id": "495143188735",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "olumoko-primary-vpc-private-eu-west-1a"
            },
            "tags_all": {
              "Name": "olumoko-primary-vpc-private-eu-west-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-013b5e3bc57eddd25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:495143188735:route-table/rtb-009d55bd0ac8a6031",
            "id": "rtb-009d55bd0ac8a6031",
            "owner_id": "495143188735",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "olumoko-primary-vpc-private-eu-west-1b"
            },
            "tags_all": {
              "Name": "olumoko-primary-vpc-private-eu-west-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-013b5e3bc57eddd25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:495143188735:route-table/rtb-02230399896825c31",
            "id": "rtb-02230399896825c31",
            "owner_id": "495143188735",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "olumoko-primary-vpc-private-eu-west-1c"
            },
            "tags_all": {
              "Name": "olumoko-primary-vpc-private-eu-west-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-013b5e3bc57eddd25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:495143188735:route-table/rtb-04711ec244d749a16",
            "id": "rtb-04711ec244d749a16",
            "owner_id": "495143188735",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "olumoko-primary-vpc-public"
            },
            "tags_all": {
              "Name": "olumoko-primary-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-013b5e3bc57eddd25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07db85eb49c9aec1d",
            "route_table_id": "rtb-02b2655f357d18275",
            "subnet_id": "subnet-07646f2d03b72daf0"
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_route_table.private",
            "module.moses_vpc.module.vpc_primary.aws_subnet.private",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb1362cbc71ddd10",
            "route_table_id": "rtb-009d55bd0ac8a6031",
            "subnet_id": "subnet-0eb0605ed75c1e98b"
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_route_table.private",
            "module.moses_vpc.module.vpc_primary.aws_subnet.private",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e43c29a49391e6ee",
            "route_table_id": "rtb-02230399896825c31",
            "subnet_id": "subnet-03fae03eb1d2cf414"
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_route_table.private",
            "module.moses_vpc.module.vpc_primary.aws_subnet.private",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ceaf4c395f5255dc",
            "route_table_id": "rtb-04711ec244d749a16",
            "subnet_id": "subnet-0a9767c8f72f68e4a"
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_route_table.public",
            "module.moses_vpc.module.vpc_primary.aws_subnet.public",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c4a90e28b4587aa",
            "route_table_id": "rtb-04711ec244d749a16",
            "subnet_id": "subnet-064866f372299bf2b"
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_route_table.public",
            "module.moses_vpc.module.vpc_primary.aws_subnet.public",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008c04e8907f29c69",
            "route_table_id": "rtb-04711ec244d749a16",
            "subnet_id": "subnet-028764d90992587d1"
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_route_table.public",
            "module.moses_vpc.module.vpc_primary.aws_subnet.public",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:495143188735:subnet/subnet-07646f2d03b72daf0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07646f2d03b72daf0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495143188735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "olumoko-primary-vpc-private-eu-west-1a",
              "kubernetes.io/cluster/pip-olumoko-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "olumoko-primary-vpc-private-eu-west-1a",
              "kubernetes.io/cluster/pip-olumoko-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-013b5e3bc57eddd25"
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:495143188735:subnet/subnet-0eb0605ed75c1e98b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb0605ed75c1e98b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495143188735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "olumoko-primary-vpc-private-eu-west-1b",
              "kubernetes.io/cluster/pip-olumoko-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "olumoko-primary-vpc-private-eu-west-1b",
              "kubernetes.io/cluster/pip-olumoko-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-013b5e3bc57eddd25"
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:495143188735:subnet/subnet-03fae03eb1d2cf414",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fae03eb1d2cf414",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495143188735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "olumoko-primary-vpc-private-eu-west-1c",
              "kubernetes.io/cluster/pip-olumoko-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "olumoko-primary-vpc-private-eu-west-1c",
              "kubernetes.io/cluster/pip-olumoko-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-013b5e3bc57eddd25"
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:495143188735:subnet/subnet-0a9767c8f72f68e4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9767c8f72f68e4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495143188735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "olumoko-primary-vpc-public-eu-west-1a",
              "kubernetes.io/cluster/pip-olumoko-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "olumoko-primary-vpc-public-eu-west-1a",
              "kubernetes.io/cluster/pip-olumoko-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-013b5e3bc57eddd25"
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:495143188735:subnet/subnet-064866f372299bf2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064866f372299bf2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495143188735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "olumoko-primary-vpc-public-eu-west-1b",
              "kubernetes.io/cluster/pip-olumoko-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "olumoko-primary-vpc-public-eu-west-1b",
              "kubernetes.io/cluster/pip-olumoko-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-013b5e3bc57eddd25"
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:495143188735:subnet/subnet-028764d90992587d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028764d90992587d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495143188735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "olumoko-primary-vpc-public-eu-west-1c",
              "kubernetes.io/cluster/pip-olumoko-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "olumoko-primary-vpc-public-eu-west-1c",
              "kubernetes.io/cluster/pip-olumoko-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-013b5e3bc57eddd25"
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.eu-west-1",
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.moses_vpc.module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_primary",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:495143188735:vpc/vpc-013b5e3bc57eddd25",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d43be4f1b270e882",
            "default_route_table_id": "rtb-0614ea2dd1f9e55cd",
            "default_security_group_id": "sg-02765b50abe5357ba",
            "dhcp_options_id": "dopt-0e4ef9620d4cd82b0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-013b5e3bc57eddd25",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0614ea2dd1f9e55cd",
            "owner_id": "495143188735",
            "tags": {
              "Name": "olumoko-primary-vpc"
            },
            "tags_all": {
              "Name": "olumoko-primary-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_secondary",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "module.moses_vpc.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495143188735:network-acl/acl-00c729764f6b8b381",
            "default_network_acl_id": "acl-00c729764f6b8b381",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00c729764f6b8b381",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "495143188735",
            "subnet_ids": [
              "subnet-031755cbfb4a018a0",
              "subnet-0493724e2cb94c7db",
              "subnet-0a73157ef38034c45",
              "subnet-0cf919d6a6a684481",
              "subnet-0d11688985c3f8fd2",
              "subnet-0f5e092dbda922e9a"
            ],
            "tags": {
              "Name": "olumoko-secondary-vpc-default"
            },
            "tags_all": {
              "Name": "olumoko-secondary-vpc-default"
            },
            "vpc_id": "vpc-0ba67eb324e54026c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_secondary",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "module.moses_vpc.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495143188735:route-table/rtb-0be1c928efc9c5b77",
            "default_route_table_id": "rtb-0be1c928efc9c5b77",
            "id": "rtb-0be1c928efc9c5b77",
            "owner_id": "495143188735",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "olumoko-secondary-vpc-default"
            },
            "tags_all": {
              "Name": "olumoko-secondary-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ba67eb324e54026c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_secondary",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "module.moses_vpc.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495143188735:security-group/sg-0ce72c51f68b8a716",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0ce72c51f68b8a716",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "495143188735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "olumoko-secondary-vpc-default"
            },
            "tags_all": {
              "Name": "olumoko-secondary-vpc-default"
            },
            "vpc_id": "vpc-0ba67eb324e54026c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_secondary",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.moses_vpc.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0217d7e6ce18cf2b6",
            "arn": "arn:aws:ec2:us-west-2:495143188735:elastic-ip/eipalloc-0217d7e6ce18cf2b6",
            "domain": "vpc",
            "id": "eipalloc-0217d7e6ce18cf2b6",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-52-26-115-212.us-west-2.compute.amazonaws.com",
            "public_ip": "52.26.115.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "olumoko-secondary-vpc-us-west-2a"
            },
            "tags_all": {
              "Name": "olumoko-secondary-vpc-us-west-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d9d7198f2b16afe",
            "arn": "arn:aws:ec2:us-west-2:495143188735:elastic-ip/eipalloc-07d9d7198f2b16afe",
            "domain": "vpc",
            "id": "eipalloc-07d9d7198f2b16afe",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-34-211-177-100.us-west-2.compute.amazonaws.com",
            "public_ip": "34.211.177.100",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "olumoko-secondary-vpc-us-west-2b"
            },
            "tags_all": {
              "Name": "olumoko-secondary-vpc-us-west-2b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0150902e138dec875",
            "arn": "arn:aws:ec2:us-west-2:495143188735:elastic-ip/eipalloc-0150902e138dec875",
            "domain": "vpc",
            "id": "eipalloc-0150902e138dec875",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-100-20-253-215.us-west-2.compute.amazonaws.com",
            "public_ip": "100.20.253.215",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "olumoko-secondary-vpc-us-west-2c"
            },
            "tags_all": {
              "Name": "olumoko-secondary-vpc-us-west-2c"
            },
            "vpc": true
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_secondary",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.moses_vpc.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495143188735:internet-gateway/igw-03ec55658ab5154c3",
            "id": "igw-03ec55658ab5154c3",
            "owner_id": "495143188735",
            "tags": {
              "Name": "olumoko-secondary-vpc"
            },
            "tags_all": {
              "Name": "olumoko-secondary-vpc"
            },
            "vpc_id": "vpc-0ba67eb324e54026c"
          },
          "dependencies": [
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_secondary",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.moses_vpc.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0217d7e6ce18cf2b6",
            "association_id": "eipassoc-091b3d1facd6b5166",
            "connectivity_type": "public",
            "id": "nat-04e5ec679a6978688",
            "network_interface_id": "eni-03bf3b9e0ef360967",
            "private_ip": "10.0.4.26",
            "public_ip": "52.26.115.212",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-031755cbfb4a018a0",
            "tags": {
              "Name": "olumoko-secondary-vpc-us-west-2a"
            },
            "tags_all": {
              "Name": "olumoko-secondary-vpc-us-west-2a"
            }
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_eip.nat",
            "module.moses_vpc.module.vpc_secondary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.public",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d9d7198f2b16afe",
            "association_id": "eipassoc-017192bbf555ed611",
            "connectivity_type": "public",
            "id": "nat-08a7db18167c79a7f",
            "network_interface_id": "eni-084aa0c1d2d107212",
            "private_ip": "10.0.5.240",
            "public_ip": "34.211.177.100",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a73157ef38034c45",
            "tags": {
              "Name": "olumoko-secondary-vpc-us-west-2b"
            },
            "tags_all": {
              "Name": "olumoko-secondary-vpc-us-west-2b"
            }
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_eip.nat",
            "module.moses_vpc.module.vpc_secondary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.public",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0150902e138dec875",
            "association_id": "eipassoc-082e2c6a9ea20628f",
            "connectivity_type": "public",
            "id": "nat-0b0b71f000728e0e3",
            "network_interface_id": "eni-0d95fa878f8bc1acc",
            "private_ip": "10.0.6.76",
            "public_ip": "100.20.253.215",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f5e092dbda922e9a",
            "tags": {
              "Name": "olumoko-secondary-vpc-us-west-2c"
            },
            "tags_all": {
              "Name": "olumoko-secondary-vpc-us-west-2c"
            }
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_eip.nat",
            "module.moses_vpc.module.vpc_secondary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.public",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.moses_vpc.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bd91642b323f66961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04e5ec679a6978688",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bd91642b323f6696",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_eip.nat",
            "module.moses_vpc.module.vpc_secondary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_nat_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.private",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.public",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0438307febee35f451080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08a7db18167c79a7f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0438307febee35f45",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_eip.nat",
            "module.moses_vpc.module.vpc_secondary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_nat_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.private",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.public",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e7a651ddd4e56bd71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b0b71f000728e0e3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e7a651ddd4e56bd7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_eip.nat",
            "module.moses_vpc.module.vpc_secondary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_nat_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.private",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.public",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.moses_vpc.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03ec55658ab5154c3",
            "id": "r-rtb-0a162d447b0a5cdf71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a162d447b0a5cdf7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_internet_gateway.this",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.public",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.moses_vpc.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495143188735:route-table/rtb-0bd91642b323f6696",
            "id": "rtb-0bd91642b323f6696",
            "owner_id": "495143188735",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "olumoko-secondary-vpc-private-us-west-2a"
            },
            "tags_all": {
              "Name": "olumoko-secondary-vpc-private-us-west-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba67eb324e54026c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495143188735:route-table/rtb-0438307febee35f45",
            "id": "rtb-0438307febee35f45",
            "owner_id": "495143188735",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "olumoko-secondary-vpc-private-us-west-2b"
            },
            "tags_all": {
              "Name": "olumoko-secondary-vpc-private-us-west-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba67eb324e54026c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495143188735:route-table/rtb-0e7a651ddd4e56bd7",
            "id": "rtb-0e7a651ddd4e56bd7",
            "owner_id": "495143188735",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "olumoko-secondary-vpc-private-us-west-2c"
            },
            "tags_all": {
              "Name": "olumoko-secondary-vpc-private-us-west-2c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba67eb324e54026c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.moses_vpc.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495143188735:route-table/rtb-0a162d447b0a5cdf7",
            "id": "rtb-0a162d447b0a5cdf7",
            "owner_id": "495143188735",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "olumoko-secondary-vpc-public"
            },
            "tags_all": {
              "Name": "olumoko-secondary-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba67eb324e54026c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.moses_vpc.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6d6fccf7f971dc7",
            "route_table_id": "rtb-0bd91642b323f6696",
            "subnet_id": "subnet-0493724e2cb94c7db"
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.private",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.private",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b61bcb1fd5ab6bbb",
            "route_table_id": "rtb-0438307febee35f45",
            "subnet_id": "subnet-0cf919d6a6a684481"
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.private",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.private",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fec617db911711da",
            "route_table_id": "rtb-0e7a651ddd4e56bd7",
            "subnet_id": "subnet-0d11688985c3f8fd2"
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.private",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.private",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.moses_vpc.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0715975c804de0be4",
            "route_table_id": "rtb-0a162d447b0a5cdf7",
            "subnet_id": "subnet-031755cbfb4a018a0"
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.public",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.public",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c4d3975a8c1ad16",
            "route_table_id": "rtb-0a162d447b0a5cdf7",
            "subnet_id": "subnet-0a73157ef38034c45"
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.public",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.public",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08695a76ded8df81e",
            "route_table_id": "rtb-0a162d447b0a5cdf7",
            "subnet_id": "subnet-0f5e092dbda922e9a"
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_route_table.public",
            "module.moses_vpc.module.vpc_secondary.aws_subnet.public",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_secondary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.moses_vpc.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495143188735:subnet/subnet-0493724e2cb94c7db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0493724e2cb94c7db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495143188735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "olumoko-secondary-vpc-private-us-west-2a",
              "kubernetes.io/cluster/pip-olumoko-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "olumoko-secondary-vpc-private-us-west-2a",
              "kubernetes.io/cluster/pip-olumoko-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ba67eb324e54026c"
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495143188735:subnet/subnet-0cf919d6a6a684481",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf919d6a6a684481",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495143188735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "olumoko-secondary-vpc-private-us-west-2b",
              "kubernetes.io/cluster/pip-olumoko-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "olumoko-secondary-vpc-private-us-west-2b",
              "kubernetes.io/cluster/pip-olumoko-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ba67eb324e54026c"
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495143188735:subnet/subnet-0d11688985c3f8fd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d11688985c3f8fd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495143188735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "olumoko-secondary-vpc-private-us-west-2c",
              "kubernetes.io/cluster/pip-olumoko-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "olumoko-secondary-vpc-private-us-west-2c",
              "kubernetes.io/cluster/pip-olumoko-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ba67eb324e54026c"
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_secondary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.moses_vpc.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495143188735:subnet/subnet-031755cbfb4a018a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031755cbfb4a018a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495143188735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "olumoko-secondary-vpc-public-us-west-2a",
              "kubernetes.io/cluster/pip-olumoko-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "olumoko-secondary-vpc-public-us-west-2a",
              "kubernetes.io/cluster/pip-olumoko-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ba67eb324e54026c"
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495143188735:subnet/subnet-0a73157ef38034c45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a73157ef38034c45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495143188735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "olumoko-secondary-vpc-public-us-west-2b",
              "kubernetes.io/cluster/pip-olumoko-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "olumoko-secondary-vpc-public-us-west-2b",
              "kubernetes.io/cluster/pip-olumoko-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ba67eb324e54026c"
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495143188735:subnet/subnet-0f5e092dbda922e9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5e092dbda922e9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495143188735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "olumoko-secondary-vpc-public-us-west-2c",
              "kubernetes.io/cluster/pip-olumoko-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "olumoko-secondary-vpc-public-us-west-2c",
              "kubernetes.io/cluster/pip-olumoko-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ba67eb324e54026c"
          },
          "dependencies": [
            "module.moses_vpc.data.aws_availability_zones.us-west-2",
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.moses_vpc.module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.moses_vpc.module.vpc_secondary",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.moses_vpc.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495143188735:vpc/vpc-0ba67eb324e54026c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00c729764f6b8b381",
            "default_route_table_id": "rtb-0be1c928efc9c5b77",
            "default_security_group_id": "sg-0ce72c51f68b8a716",
            "dhcp_options_id": "dopt-065664a8467c78ea5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ba67eb324e54026c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0be1c928efc9c5b77",
            "owner_id": "495143188735",
            "tags": {
              "Name": "olumoko-secondary-vpc"
            },
            "tags_all": {
              "Name": "olumoko-secondary-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my-eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:495143188735:security-group/sg-0ac65e5031e7405bb",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0ac65e5031e7405bb",
            "ingress": [],
            "name": "pip-olumoko-cluster-cluster-20240913132822635400000010",
            "name_prefix": "pip-olumoko-cluster-cluster-",
            "owner_id": "495143188735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pip-olumoko-cluster-cluster"
            },
            "tags_all": {
              "Name": "pip-olumoko-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-013b5e3bc57eddd25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_primary.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my-eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:495143188735:security-group/sg-0604becbf569c351b",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0604becbf569c351b",
            "ingress": [],
            "name": "pip-olumoko-cluster-node-20240913132822792400000011",
            "name_prefix": "pip-olumoko-cluster-node-",
            "owner_id": "495143188735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pip-olumoko-cluster-node",
              "kubernetes.io/cluster/pip-olumoko-cluster": "owned"
            },
            "tags_all": {
              "Name": "pip-olumoko-cluster-node",
              "kubernetes.io/cluster/pip-olumoko-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-013b5e3bc57eddd25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_primary.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my-eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2360918657",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ac65e5031e7405bb",
            "security_group_rule_id": "sgr-058be08f01dc65916",
            "self": false,
            "source_security_group_id": "sg-0604becbf569c351b",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.my-eks.module.eks.aws_security_group.cluster",
            "module.my-eks.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my-eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-4178387251",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0604becbf569c351b",
            "security_group_rule_id": "sgr-05d8895d393b48931",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.my-eks.module.eks.aws_security_group.cluster",
            "module.my-eks.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-909357135",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0604becbf569c351b",
            "security_group_rule_id": "sgr-0e863aec1d00bfbce",
            "self": false,
            "source_security_group_id": "sg-0ac65e5031e7405bb",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.my-eks.module.eks.aws_security_group.cluster",
            "module.my-eks.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-4103994113",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0604becbf569c351b",
            "security_group_rule_id": "sgr-02b30bef978019b79",
            "self": false,
            "source_security_group_id": "sg-0ac65e5031e7405bb",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.my-eks.module.eks.aws_security_group.cluster",
            "module.my-eks.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1038064791",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0604becbf569c351b",
            "security_group_rule_id": "sgr-09b1339c0a7a9e649",
            "self": false,
            "source_security_group_id": "sg-0ac65e5031e7405bb",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.my-eks.module.eks.aws_security_group.cluster",
            "module.my-eks.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-780378294",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0604becbf569c351b",
            "security_group_rule_id": "sgr-062b78d7af0bd5cf9",
            "self": false,
            "source_security_group_id": "sg-0ac65e5031e7405bb",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.my-eks.module.eks.aws_security_group.cluster",
            "module.my-eks.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1243779965",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0604becbf569c351b",
            "security_group_rule_id": "sgr-029a7cb41b91700b9",
            "self": false,
            "source_security_group_id": "sg-0ac65e5031e7405bb",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.my-eks.module.eks.aws_security_group.cluster",
            "module.my-eks.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3222213810",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0604becbf569c351b",
            "security_group_rule_id": "sgr-0c098334a1aa0f928",
            "self": false,
            "source_security_group_id": "sg-0ac65e5031e7405bb",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.my-eks.module.eks.aws_security_group.cluster",
            "module.my-eks.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3251052788",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0604becbf569c351b",
            "security_group_rule_id": "sgr-0950e7b9aeb94ce35",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.my-eks.module.eks.aws_security_group.cluster",
            "module.my-eks.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2813259438",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0604becbf569c351b",
            "security_group_rule_id": "sgr-04a6ebaf9b8ae3801",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.my-eks.module.eks.aws_security_group.cluster",
            "module.my-eks.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-66145601",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0604becbf569c351b",
            "security_group_rule_id": "sgr-0c4cf57c39993962f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_primary.aws_vpc.this",
            "module.my-eks.module.eks.aws_security_group.cluster",
            "module.my-eks.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my-eks.module.eks-dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "module.my-eks.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495143188735:security-group/sg-071489d3b8cff60b1",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-071489d3b8cff60b1",
            "ingress": [],
            "name": "pip-olumoko-cluster-cluster-2024091313283939450000000e",
            "name_prefix": "pip-olumoko-cluster-cluster-",
            "owner_id": "495143188735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pip-olumoko-cluster-cluster"
            },
            "tags_all": {
              "Name": "pip-olumoko-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba67eb324e54026c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my-eks.module.eks-dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "module.my-eks.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495143188735:security-group/sg-069e7131ace2c9dc7",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-069e7131ace2c9dc7",
            "ingress": [],
            "name": "pip-olumoko-cluster-node-2024091313283959130000000f",
            "name_prefix": "pip-olumoko-cluster-node-",
            "owner_id": "495143188735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pip-olumoko-cluster-node",
              "kubernetes.io/cluster/pip-olumoko-cluster": "owned"
            },
            "tags_all": {
              "Name": "pip-olumoko-cluster-node",
              "kubernetes.io/cluster/pip-olumoko-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba67eb324e54026c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my-eks.module.eks-dev",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "module.my-eks.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3999560725",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-071489d3b8cff60b1",
            "security_group_rule_id": "sgr-05456a616ba480d27",
            "self": false,
            "source_security_group_id": "sg-069e7131ace2c9dc7",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.my-eks.module.eks-dev.aws_security_group.cluster",
            "module.my-eks.module.eks-dev.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my-eks.module.eks-dev",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "module.my-eks.provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1078613604",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-069e7131ace2c9dc7",
            "security_group_rule_id": "sgr-0aa3f326f8aeaac02",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.my-eks.module.eks-dev.aws_security_group.cluster",
            "module.my-eks.module.eks-dev.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1849720716",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-069e7131ace2c9dc7",
            "security_group_rule_id": "sgr-0dad768254fb2a21e",
            "self": false,
            "source_security_group_id": "sg-071489d3b8cff60b1",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.my-eks.module.eks-dev.aws_security_group.cluster",
            "module.my-eks.module.eks-dev.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2917602754",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-069e7131ace2c9dc7",
            "security_group_rule_id": "sgr-0a9d2c97e200e779f",
            "self": false,
            "source_security_group_id": "sg-071489d3b8cff60b1",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.my-eks.module.eks-dev.aws_security_group.cluster",
            "module.my-eks.module.eks-dev.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1688564308",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-069e7131ace2c9dc7",
            "security_group_rule_id": "sgr-00dd53ec6a4f08dc3",
            "self": false,
            "source_security_group_id": "sg-071489d3b8cff60b1",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.my-eks.module.eks-dev.aws_security_group.cluster",
            "module.my-eks.module.eks-dev.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2012827253",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-069e7131ace2c9dc7",
            "security_group_rule_id": "sgr-0eee4e6c34da6abd1",
            "self": false,
            "source_security_group_id": "sg-071489d3b8cff60b1",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.my-eks.module.eks-dev.aws_security_group.cluster",
            "module.my-eks.module.eks-dev.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-324566462",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-069e7131ace2c9dc7",
            "security_group_rule_id": "sgr-0899be8ab2f0ff2a2",
            "self": false,
            "source_security_group_id": "sg-071489d3b8cff60b1",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.my-eks.module.eks-dev.aws_security_group.cluster",
            "module.my-eks.module.eks-dev.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3575442214",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-069e7131ace2c9dc7",
            "security_group_rule_id": "sgr-05576abd58ddbd1b7",
            "self": false,
            "source_security_group_id": "sg-071489d3b8cff60b1",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.my-eks.module.eks-dev.aws_security_group.cluster",
            "module.my-eks.module.eks-dev.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-721905345",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-069e7131ace2c9dc7",
            "security_group_rule_id": "sgr-0469673acb5b87e77",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.my-eks.module.eks-dev.aws_security_group.cluster",
            "module.my-eks.module.eks-dev.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4194428761",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-069e7131ace2c9dc7",
            "security_group_rule_id": "sgr-016e62a3983bd3611",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.my-eks.module.eks-dev.aws_security_group.cluster",
            "module.my-eks.module.eks-dev.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1583236278",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-069e7131ace2c9dc7",
            "security_group_rule_id": "sgr-05715a0bc5dbfd1f5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.moses_vpc.module.vpc_secondary.aws_vpc.this",
            "module.my-eks.module.eks-dev.aws_security_group.cluster",
            "module.my-eks.module.eks-dev.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}